--- a/package.json
+++ b/package.json
@@ -1,78 +1,41 @@
 {
-  "name": "vue-compare-image",
-  "version": "0.2.0",
-  "description": "Vue component to compare two images using slider.",
-  "author": "Shota Tamura",
+  "name": "vue3-compare-image-vite",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "build:lib": "vue-cli-service build --target lib --name vueCompareImage ./src/VueCompareImage.vue",
-    "prepublishOnly": "npm run build:lib"
+    "dev": "vite",
+    "build": "run-p type-check build-only",
+    "preview": "vite preview",
+    "test:unit": "vitest",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/"
   },
-  "main": "dist/vueCompareImage.common.js",
-  "files": [
-    "dist/*",
-    "src/*",
-    "public/*",
-    "*.json",
-    "*.js"
-  ],
   "dependencies": {
-    "core-js": "^3.1.2",
-    "css-element-queries": "^1.0.2",
-    "vue": "^2.5.17"
+    "core-js": "^3.31.1",
+    "css-element-queries": "^1.2.3",
+    "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.0.4",
-    "@vue/cli-plugin-eslint": "^4.0.4",
-    "@vue/cli-service": "^4.0.4",
-    "@vue/eslint-config-airbnb": "^4.0.1",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.5.1",
-    "eslint-plugin-vue": "^5.2.3",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.5.17"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "@vue/airbnb"
-    ],
-    "rules": {
-      "no-mixed-operators": 0,
-      "no-irregular-whitespace": 0,
-      "prefer-template": 0
-    },
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
-  "keywords": [
-    "picture comparison",
-    "image comparison",
-    "slider",
-    "react",
-    "twentytwenty"
-  ],
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "junkboy0315/vue-compare-image"
+    "@rushstack/eslint-patch": "^1.2.0",
+    "@tsconfig/node18": "^2.0.1",
+    "@types/jsdom": "^21.1.1",
+    "@types/node": "^18.16.17",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/test-utils": "^2.3.2",
+    "@vue/tsconfig": "^0.4.0",
+    "eslint": "^8.39.0",
+    "eslint-plugin-vue": "^9.11.0",
+    "jsdom": "^22.1.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.8.8",
+    "sass": "^1.64.0",
+    "typescript": "~5.0.4",
+    "vite": "^4.3.9",
+    "vitest": "^0.32.0",
+    "vue-tsc": "^1.6.5"
   }
 }
