--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "vite": "^4.3.9",
     "vite-plugin-dts": "^3.3.1",
     "vitest": "^0.32.0",
-    "vue-tsc": "^1.6.5"
+    "vue-tsc": "^1.6.5",
+    "vue": "^3.3.4"
   },
   "keywords": [
     "picture comparison",
