--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "vue3-compare-image",
   "version": "0.1.2",
-  "license": "MIT",
   "description": "Vue 3 component to compare two images using slider.",
   "author": {
     "name": "Cedrouseroll Omondi",
     "email": "omondicedo@gmail.com",
     "url": "https://github.com/zedjarvis"
   },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zedjarvis/vue3-compare-image"
+  },
   "type": "module",
-  "files": ["dist", "src"],
+  "files": ["dist"],
   "private": false,
   "main": "./dist/vue3-compare-image.umd.cjs",
   "module": "./dist/vue3-compare-image.js",
@@ -36,7 +40,7 @@
     "css-element-queries": "^1.2.3"
   },
   "peerDependencies": {
-    "vue": "^3.3.4"
+    "vue": "^3.0.11"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
@@ -59,7 +63,7 @@
     "vite-plugin-dts": "^3.3.1",
     "vitest": "^0.32.0",
     "vue-tsc": "^1.6.5",
-    "vue": "^3.3.4"
+    "vue": "^3.0.11"
   },
   "keywords": [
     "picture comparison",
@@ -68,5 +72,6 @@
     "vue 3",
     "compare image",
     "latest"
-  ]
+  ],
+  "readme": "./README.md"
 }
