--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue3-compare-image",
   "private": false,
   "version": "0.1.3",
-  "description": "Vue 3 component to compare two images using slider.",
+  "description": "A Vue 3 component to compare and slide between two images, supporting vertical and horizontal comparison modes.",
   "author": {
     "name": "Cedrouseroll Omondi",
     "email": "omondicedo@gmail.com",
@@ -24,10 +24,6 @@
     ".": {
       "import": "./dist/vue3-compare-image.es.js",
       "require": "./dist/vue3-compare-image.umd.js"
-    },
-    "./style.css": {
-      "import": "./dist/style.css",
-      "require": "./dist/style.css"
     }
   },
   "scripts": {
@@ -41,8 +37,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "core-js": "^3.31.1",
-    "css-element-queries": "^1.2.3"
+    "core-js": "^3.31.1"
   },
   "peerDependencies": {
     "vue": "^3.0.11"
@@ -73,11 +68,14 @@
     "vue-tsc": "^1.6.5"
   },
   "keywords": [
+    "vue",
+    "vue 3",
     "picture comparison",
     "image comparison",
-    "slider",
-    "vue 3",
     "compare image",
+    "slider",
+    "image slider",
+    "image diff",
     "latest"
   ],
   "readme": "./README.md"
