--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -10,6 +10,8 @@
   "compilerOptions": {
     "composite": true,
     "module": "ESNext",
-    "types": ["node"]
+    "target": "ESNext",
+    "types": ["node"],
+    "skipLibCheck": true
   }
 }
