--- a/package.json
+++ b/package.json
@@ -1,114 +1,79 @@
 {
   "name": "vue3-compare-image",
-  "private": false,
-  "version": "1.1.0",
-  "type": "module",
+  "version": "1.1.1",
+  "packageManager": "pnpm@8.6.5",
   "description": "A Vue 3 component to compare and slide between two images, supports vertical and horizontal modes, and Keyboard for accessibility.",
-  "author": {
-    "name": "Cedrouseroll Omondi",
-    "email": "omondicedo@gmail.com",
-    "url": "https://github.com/zedjarvis"
-  },
-  "keywords": [
-    "vue",
-    "vue 3",
-    "picture comparison",
-    "image comparison",
-    "compare image",
-    "slider",
-    "image slider",
-    "image diff",
-    "latest"
-  ],
-  "readme": "./README.md",
+  "author": "Cedrouseroll Omondi <omondicedo@gmail.com>",
   "license": "MIT",
+  "readme": "./README.md",
+  "homepage": "https://github.com/zedjarvis/vue3-compare-image#readme",
+  "bugs": "https://github.com/zedjarvis/vue3-compare-image/issues",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/zedjarvis/vue3-compare-image"
   },
-  "homepage": "https://github.com/zedjarvis/vue3-compare-image",
-  "bugs": "https://github.com/zedjarvis/vue3-compare-image/issues",
-  "files": [
-    "dist",
-    "LICENSE"
+  "keywords": [
+    "vue3 compare image",
+    "picture comparison",
+    "image comparison",
+    "compare image",
+    "image slider",
+    "image diff",
+    "latest",
+    "typescript"
   ],
-  "main": "./dist/vue3-compare-image.umd.js",
-  "module": "./dist/vue3-compare-image.es.js",
-  "types": "./dist/index.d.ts",
+  "sideEffects": false,
   "exports": {
     ".": {
-      "import": "./dist/vue3-compare-image.es.js",
-      "require": "./dist/vue3-compare-image.umd.js",
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
       "types": "./dist/index.d.ts"
+    },
+    "./components": {
+      "types": "./dist/components/index.d.ts",
+      "require": "./dist/components/index.js",
+      "import": "./dist/components/index.mjs"
     }
   },
-  "simple-git-hooks": {
-    "pre-commit": "pnpm lint-staged"
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "typesVersions": {
+    "*": {
+      "*": [
+        "*",
+        "dist/*",
+        "dist/*.d.ts",
+        "dist/*/index.d.ts"
+      ]
+    }
   },
-  "lint-staged": {
-    "*": "eslint --fix"
-  },
+  "files": [
+    "dist",
+    "client.d.ts",
+    "LICENSE"
+  ],
   "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check build-only",
-    "preview": "vite preview",
-    "test:unit": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/",
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
-  },
-  "dependencies": {
-    "core-js": "^3.31.1"
+    "build": "unbuild",
+    "dev": "vite serve dev",
+    "dev:build": "vite build dev",
+    "dev:preview": "vite preview dev",
+    "lint": "eslint .",
+    "prepublishOnly": "pnpm build"
   },
   "peerDependencies": {
-    "vue": "^3.0.11"
+    "vue": "^3.2.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.40.2",
-    "@rushstack/eslint-patch": "^1.2.0",
-    "@storybook/addon-essentials": "^7.2.1",
-    "@storybook/addon-interactions": "^7.2.1",
-    "@storybook/addon-links": "^7.2.1",
-    "@storybook/blocks": "^7.2.1",
-    "@storybook/testing-library": "^0.2.0",
-    "@storybook/vue3": "^7.2.1",
-    "@storybook/vue3-vite": "^7.2.1",
-    "@tsconfig/node18": "^18.2.0",
-    "@types/jsdom": "^21.1.1",
-    "@types/node": "^20.4.5",
+    "@antfu/eslint-config": "^0.39.8",
+    "@types/node": "^20.4.3",
     "@vitejs/plugin-vue": "^4.2.3",
-    "@vitest/coverage-v8": "^0.33.0",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^11.0.3",
-    "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.4.0",
-    "eslint": "^8.46.0",
-    "eslint-plugin-storybook": "^0.6.13",
-    "eslint-plugin-vue": "^9.11.0",
-    "jsdom": "^22.1.0",
-    "lint-staged": "^13.2.3",
-    "npm-run-all": "^4.1.5",
-    "path": "^0.12.7",
-    "prettier": "^3.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rollup-plugin-typescript2": "^0.35.0",
-    "sass": "^1.64.1",
-    "simple-git-hooks": "^2.9.0",
-    "storybook": "^7.2.1",
-    "typescript": "~5.1.6",
-    "vite": "^4.4.7",
-    "vite-plugin-dts": "^3.3.1",
-    "vitepress": "^1.0.0-beta.6",
-    "vitest": "^0.33.0",
-    "vue": "^3.0.11",
-    "vue-tsc": "^1.8.6"
+    "@vueuse/core": "^10.4.0",
+    "eslint": "^8.45.0",
+    "typescript": "^5.1.6",
+    "unbuild": "2.0.0-rc.0",
+    "vite": "^4.4.6",
+    "vue": "^3.3.4"
   }
 }
