--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,3 @@
 {
-  "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.node.json"
-    },
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.vitest.json"
-    }
-  ]
+  "extends": "@vue/tsconfig/tsconfig.dom.json"
 }
