--- a/package.json
+++ b/package.json
@@ -61,32 +61,31 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
-    "test": "pnpm lint && pnpm test:types && vitest run --coverage",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "typecheck": "vue-tsc --noEmit --skipLibCheck"
   },
   "peerDependencies": {
     "vue": "^3.2.0"
   },
-  "dependencies": {
-    "@vueuse/core": "^10.5.0"
-  },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.8",
-    "@types/node": "^20.4.3",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vue/test-utils": "^2.4.1",
+    "@types/node": "^20.12.13",
+    "@vitejs/plugin-vue": "^4.6.2",
+    "@vitest/coverage-v8": "^1.6.0",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.4.0",
-    "bumpp": "^9.2.0",
+    "bumpp": "^9.4.1",
     "changelogen": "^0.5.5",
-    "eslint": "^8.45.0",
+    "eslint": "^8.57.0",
     "lint-staged": "^14.0.1",
-    "simple-git-hooks": "^2.9.0",
-    "typescript": "^5.1.6",
+    "simple-git-hooks": "^2.11.1",
+    "typescript": "^5.4.5",
     "unbuild": "2.0.0-rc.0",
-    "vite": "^4.4.6",
+    "vite": "^4.5.3",
     "vitepress": "1.0.0-rc.4",
-    "vitest": "^0.34.3",
-    "vue": "^3.3.4"
+    "vitest": "^1.6.0",
+    "vue": "^3.4.27"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
